force-app/main/default/objects/Renewal_Chat__c/Renewal_Chat__c.object-meta.xml
<CustomObject>
    <label>Renewal Chat</label>
    <nameField>
        <displayFormat>RC-{0000000}</displayFormat>
        <label>Renewal Chat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Chats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>