force-app/main/default/objects/Renewal_Chat__c/fields/Chat_Text__c.field-meta.xml
<CustomField>
    <fullName>Chat_Text__c</fullName>
    <label>Chat Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>