force-app/main/default/objects/Renewal_Chat__c/fields/From_Symphony__c.field-meta.xml
<CustomField>
    <fullName>From_Symphony__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Symphony</label>
    <type>Checkbox</type>
</CustomField>