force-app/main/default/objects/Renewal_Chat__c/fields/From_UserId__c.field-meta.xml
<CustomField>
    <fullName>From_UserId__c</fullName>
    <label>From UserId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>