force-app/main/default/objects/Renewal_Chat__c/fields/MaRS_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>MaRS_Reference_ID__c</fullName>
    <label>MaRS Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>